scratch, staring clean; start to client landing page(under construction.

--- a/.jshintrc
+++ b/.jshintrc
@@ -18,8 +18,6 @@
   "trailing": true,
   "smarttabs": true,
   "globals": {
-    "Foggiapr": true,
-    "Ember": true,
-    "DS": true
+    "Foggiapr": true
   }
 }
