--- a/test/.jshintrc
+++ b/test/.jshintrc
@@ -19,8 +19,6 @@
   "smarttabs": true,
   "globals": {
     "Foggiapr": true,
-    "Ember": true,
-    "DS": true,
 
     "describe": true,
     "it": true,
@@ -29,16 +27,7 @@
     "after": true,
     "afterEach": true,
     "expect": true,
-    "sinon": true,
-
-    "find": true,
-    "visit": true,
-    "click": true,
-    "fillIn": true,
-    "andThen": true,
-    "currentRouteName": true,
-    "currentPath": true,
-    "currentURL": true
+    "sinon": true
   },
   "expr": true
 }
