--- a/bower.json
+++ b/bower.json
@@ -5,12 +5,8 @@
   "private": true,
   "dependencies": {
     "jquery": "~2.1.0",
-    "bootstrap-sass": "~3.0.2",
-    "ember": "^1.5.1",
-    "handlebars": "^1.2.1",
-    "ember-data": "^1.0.0-beta.8"
+    "bootstrap-sass": "~3.0.2"
   },
   "devDependencies": {
-    "ember-mocha-adapter": "teddyzeenny/ember-mocha-adapter#master"
   }
 }
